fixed alignments of dropdown in nav of index.html for desktop and mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,22 +191,18 @@ footer a:hover {
 /*-- Media queries */
 
 @media only screen and (max-width: 600px) {
-  #logo {
+   #logo {
     font-size: 12px;
     font-weight: 600;
-}
-
-@media only screen and (max-width: 600px) {
+    }
+   
     .dropdown-menu {
-    position: absolute;
     top: 100%;
     left: 0;
     z-index: 1000;
-    display: none;
-    float: left;
     min-width: 10rem;
-    padding: .5rem 0;
-    margin: .125rem 0 0;
+    padding: 0;
+    margin: 0;
     font-size: 1rem;
     color: #212529;
     text-align: right;
@@ -214,5 +210,17 @@ footer a:hover {
     background-color: transparent;
     background-clip: padding-box;
     border: none;
-}
+    }
+    .dropdown-item {
+        padding-bottom: 2px;
+        text-decoration: underline;
+        font-size: 14px;
+        margin-top: 7px;
+    }
+    .nav-item {
+        font-size: 14px;
+    }
+    .first-dd-item {
+        margin-top: 0;
+    }
 }
